syntax = "proto3"; //指定版本，必须要写（proto3、proto2）
 
//生成类的类名  
option java_outer_classname = "SingleChatReqClass";
 

message SingleChatReq{

string senderId=1;// 发送人ID
 
string receiverId=2;// 接收人ID

int32 msgType=3;//消息类型

string body=4;//消息体

}
